force-app/main/default/objects/Opportunity/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Action Plan Needed</fullName>
            </value>
            <value>
                <fullName>Add Listing</fullName>
            </value>
            <value>
                <fullName>Address BuyBack GMV Drop</fullName>
            </value>
            <value>
                <fullName>Address Churning Merchant</fullName>
                <isActive>false</isActive>
                <label>Address Churning Merchant</label>
            </value>
            <value>
                <fullName>Address GMV Drop</fullName>
            </value>
            <value>
                <fullName>Address GMV drop BF Week</fullName>
            </value>
            <value>
                <fullName>Address Listing Drop</fullName>
            </value>
            <value>
                <fullName>Address Quality Contributors</fullName>
            </value>
            <value>
                <fullName>Avoid merchant limitation before BF</fullName>
            </value>
            <value>
                <fullName>BackImpact Label</fullName>
            </value>
            <value>
                <fullName>Cross Border</fullName>
            </value>
            <value>
                <fullName>Event Category Launch</fullName>
            </value>
            <value>
                <fullName>Grow Business</fullName>
                <isActive>false</isActive>
                <label>Grow Business</label>
            </value>
            <value>
                <fullName>Improve Commitment</fullName>
                <isActive>false</isActive>
                <label>Improve Commitment</label>
            </value>
            <value>
                <fullName>Improve efficiency / reduce costs</fullName>
                <isActive>false</isActive>
                <label>Improve efficiency / reduce costs</label>
            </value>
            <value>
                <fullName>Improve Price Sharpness</fullName>
            </value>
            <value>
                <fullName>Improve quality performance</fullName>
                <isActive>false</isActive>
                <label>Improve quality performance</label>
            </value>
            <value>
                <fullName>Improve Relevant Selection</fullName>
            </value>
            <value>
                <fullName>Improve TCB</fullName>
            </value>
            <value>
                <fullName>Lower Price</fullName>
            </value>
            <value>
                <fullName>Lower Price at Competition Level</fullName>
            </value>
            <value>
                <fullName>More Stock</fullName>
            </value>
            <value>
                <fullName>Push Actions</fullName>
            </value>
            <value>
                <fullName>Push as Deal</fullName>
            </value>
            <value>
                <fullName>Push BuyBack</fullName>
            </value>
            <value>
                <fullName>Push country(s) live</fullName>
                <isActive>false</isActive>
                <label>Push country(s) live</label>
            </value>
            <value>
                <fullName>Push good pricing</fullName>
                <isActive>false</isActive>
                <label>Push good pricing</label>
            </value>
            <value>
                <fullName>Push Listing Live in the missing countries</fullName>
            </value>
            <value>
                <fullName>Push price recommendation to increase acceptance rate</fullName>
            </value>
            <value>
                <fullName>Push Product Categories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>