force-app/main/default/objects/Opportunity/fields/Action_plan_comment__c.field-meta.xml
<CustomField>
    <fullName>Action_plan_comment__c</fullName>
    <label>Action plan - comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>