force-app/main/default/objects/Opportunity/fields/Action_Plan_s_pushed__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_s_pushed__c</fullName>
    <label>Action Plan(s) pushed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MP_LC_Action_Plan</valueSetName>
    </valueSet>
</CustomField>