force-app/main/default/objects/Opportunity/fields/Actual_GMV__c.field-meta.xml
<CustomField>
    <fullName>Actual_GMV__c</fullName>
    <label>Actual GMV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>