force-app/main/default/objects/Opportunity/fields/Back_Care_Status__c.field-meta.xml
<CustomField>
    <fullName>Back_Care_Status__c</fullName>
    <businessOwnerUser>clement.vannicatte@backmarket.com</businessOwnerUser>
    <label>Back Care Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>KO - Agents communication is poor</fullName>
            </value>
            <value>
                <fullName>KO - Diversification</fullName>
                <isActive>false</isActive>
                <label>KO - Diversification</label>
            </value>
            <value>
                <fullName>KO - Does not want to outsource</fullName>
            </value>
            <value>
                <fullName>KO - Do not want to outsource</fullName>
                <isActive>false</isActive>
                <label>KO - Do not want to outsource</label>
            </value>
            <value>
                <fullName>KO - High CSAT in domestic market</fullName>
            </value>
            <value>
                <fullName>KO - Lack of knowledge/specialization</fullName>
            </value>
            <value>
                <fullName>KO - Lack of remote assistance</fullName>
            </value>
            <value>
                <fullName>KO - Low volume of sales</fullName>
            </value>
            <value>
                <fullName>KO - Merchant is in exit</fullName>
            </value>
            <value>
                <fullName>KO - Multichannel</fullName>
                <isActive>false</isActive>
                <label>KO - Multichannel</label>
            </value>
            <value>
                <fullName>KO - No answer yet</fullName>
            </value>
            <value>
                <fullName>KO - Not willing to develop the account</fullName>
            </value>
            <value>
                <fullName>KO_Price</fullName>
                <label>KO - Price</label>
            </value>
            <value>
                <fullName>KO - Price</fullName>
                <isActive>false</isActive>
                <label>KO - Price</label>
            </value>
            <value>
                <fullName>KO - Price of return labels</fullName>
            </value>
            <value>
                <fullName>KO - Refund rate</fullName>
            </value>
            <value>
                <fullName>KO - Return rate</fullName>
            </value>
            <value>
                <fullName>KO - Seasonality</fullName>
            </value>
            <value>
                <fullName>KO - Seller already has in-house SAV solution</fullName>
            </value>
            <value>
                <fullName>KO - Seller does not want to use BackCare</fullName>
            </value>
            <value>
                <fullName>KO - Seller sells other product categories than smartphones</fullName>
            </value>
            <value>
                <fullName>KO - SSC experience is bad</fullName>
            </value>
            <value>
                <fullName>KO - Tone of the agents</fullName>
            </value>
            <value>
                <fullName>KO - Too much refunds</fullName>
                <isActive>false</isActive>
                <label>KO - Too much refunds</label>
            </value>
            <value>
                <fullName>KO - Very bad previous experience</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
                <isActive>false</isActive>
                <label>OK</label>
            </value>
            <value>
                <fullName>OK - Enable sales easily</fullName>
            </value>
            <value>
                <fullName>OK - Low volume at the moment</fullName>
            </value>
            <value>
                <fullName>OK - Mandatory for Back Repair</fullName>
            </value>
            <value>
                <fullName>OK - Poor quality (when not Back Care)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>