force-app/main/default/objects/Opportunity/fields/Back_Repair_Status__c.field-meta.xml
<CustomField>
    <fullName>Back_Repair_Status__c</fullName>
    <businessOwnerUser>clement.vannicatte@backmarket.com</businessOwnerUser>
    <label>Back Repair Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KO - Seasonality</fullName>
            </value>
            <value>
                <fullName>KO - Service is too expensive</fullName>
            </value>
            <value>
                <fullName>KO - Merchant is in exit</fullName>
            </value>
            <value>
                <fullName>KO - Seller already has in-house repair resources</fullName>
            </value>
            <value>
                <fullName>KO - Seller sells other product categories than smartphones</fullName>
            </value>
            <value>
                <fullName>KO - Seller does not want to use BackCare</fullName>
            </value>
            <value>
                <fullName>KO - I buy the products under warranty</fullName>
            </value>
            <value>
                <fullName>KO - Is an expert already</fullName>
            </value>
            <value>
                <fullName>KO - Not available in the country</fullName>
            </value>
            <value>
                <fullName>KO - Not happy with the other services at the moment</fullName>
            </value>
            <value>
                <fullName>KO - Only sell categ 1 phones</fullName>
            </value>
            <value>
                <fullName>OK - Seller does not have repair resources</fullName>
            </value>
            <value>
                <fullName>OK - Seller wants to fully externalize after-sales tasks</fullName>
            </value>
            <value>
                <fullName>OK - Seller wants to benefit from in-shop repair solution</fullName>
            </value>
            <value>
                <fullName>OK - Price</fullName>
            </value>
            <value>
                <fullName>OK - Integrated solution</fullName>
            </value>
            <value>
                <fullName>OK - Already using Back Care</fullName>
            </value>
            <value>
                <fullName>OK - Wants to try it</fullName>
            </value>
            <value>
                <fullName>KO - No answer yet</fullName>
            </value>
            <value>
                <fullName>OK - Cannot repair within 3 days</fullName>
            </value>
            <value>
                <fullName>KO - Do not want to outsource</fullName>
                <isActive>false</isActive>
                <label>KO - Do not want to outsource</label>
            </value>
            <value>
                <fullName>KO - Don&apos;t trust supplier</fullName>
                <isActive>false</isActive>
                <label>KO - Don&apos;t trust supplier</label>
            </value>
            <value>
                <fullName>KO - Multichannel</fullName>
                <isActive>false</isActive>
                <label>KO - Multichannel</label>
            </value>
            <value>
                <fullName>KO_Price</fullName>
                <isActive>false</isActive>
                <label>KO - Price</label>
            </value>
            <value>
                <fullName>OK</fullName>
                <isActive>false</isActive>
                <label>OK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>