force-app/main/default/objects/Opportunity/fields/Back_Ship_Status__c.field-meta.xml
<CustomField>
    <fullName>Back_Ship_Status__c</fullName>
    <businessOwnerUser>clement.vannicatte@backmarket.com</businessOwnerUser>
    <label>Back Ship Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>KO- Express too expensive</fullName>
            </value>
            <value>
                <fullName>KO - Log outsourced</fullName>
            </value>
            <value>
                <fullName>KO- Merchant is in exit</fullName>
            </value>
            <value>
                <fullName>KO - Multichannel</fullName>
            </value>
            <value>
                <fullName>KO - No answer yet</fullName>
            </value>
            <value>
                <fullName>KO - No dev capacity</fullName>
                <isActive>false</isActive>
                <label>KO - No dev capacity</label>
            </value>
            <value>
                <fullName>KO- No possibility to download all labels at once</fullName>
            </value>
            <value>
                <fullName>KO- No possibility to insure a maximum amount per seller</fullName>
            </value>
            <value>
                <fullName>KO- No possibility to insure only part of shipments</fullName>
            </value>
            <value>
                <fullName>KO - Price</fullName>
            </value>
            <value>
                <fullName>KO- Rebilling</fullName>
            </value>
            <value>
                <fullName>KO- Refunds/carrier investigation are too long</fullName>
            </value>
            <value>
                <fullName>KO - Return labels are too expensive</fullName>
            </value>
            <value>
                <fullName>KO - Seasonality</fullName>
            </value>
            <value>
                <fullName>KO- Specific flow too expensive</fullName>
            </value>
            <value>
                <fullName>KO- Standard too expensive</fullName>
            </value>
            <value>
                <fullName>KO- Use an integrator and BS not integrable</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
                <isActive>false</isActive>
                <label>OK</label>
            </value>
            <value>
                <fullName>OK - Dedicated support team</fullName>
            </value>
            <value>
                <fullName>OK - Enable cross border shipments in 1 click</fullName>
            </value>
            <value>
                <fullName>OK - Free Regular pick up</fullName>
            </value>
            <value>
                <fullName>OK - Label generation in the BO</fullName>
            </value>
            <value>
                <fullName>OK - Price is better than mine</fullName>
            </value>
            <value>
                <fullName>OK - Quality exceptions granted if carrier delivery performance is poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>