force-app/main/default/objects/Opportunity/fields/Blocker__c.field-meta.xml
<CustomField>
    <fullName>Blocker__c</fullName>
    <label>Blocker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Timing - BM took too long to make an offer</fullName>
            </value>
            <value>
                <fullName>Timing - Not the best period of the year for the company</fullName>
            </value>
            <value>
                <fullName>Selection - Quantities available weren’t enough</fullName>
            </value>
            <value>
                <fullName>Selection - Product not available on the website</fullName>
            </value>
            <value>
                <fullName>Price - Discount Vs. New too low</fullName>
            </value>
            <value>
                <fullName>Price - Price vs. BM not clear</fullName>
            </value>
            <value>
                <fullName>Price - Refurb cheaper on another website</fullName>
            </value>
            <value>
                <fullName>Payment terms - Looking for 30+ days terms</fullName>
            </value>
            <value>
                <fullName>Payment terms - Looking for a leasing option</fullName>
            </value>
            <value>
                <fullName>Warranty - Looking for 24 months of coverage</fullName>
            </value>
            <value>
                <fullName>Warranty - Looking for broken/lost coverage</fullName>
            </value>
            <value>
                <fullName>Geography - UK order</fullName>
            </value>
            <value>
                <fullName>Geography - Back Market doesn’t deliver in this country</fullName>
            </value>
            <value>
                <fullName>No news from the client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
                <isActive>false</isActive>
                <label>Inventory</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <isActive>false</isActive>
                <label>Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>