force-app/main/default/objects/Opportunity/fields/Current_Quarterly_Sales_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Quarterly_Sales_Level__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Current Quarterly Sales Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>