force-app/main/default/objects/Opportunity/fields/Decrease_in_number__c.field-meta.xml
<CustomField>
    <fullName>Decrease_in_number__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Decrease in #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>