force-app/main/default/objects/Opportunity/fields/Expected_Countries__c.field-meta.xml
<CustomField>
    <fullName>Expected_Countries__c</fullName>
    <label>Exp. Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Targeted_Country</valueSetName>
    </valueSet>
</CustomField>