force-app/main/default/objects/Opportunity/fields/Expected_Date_to_Trigger_the_Action__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_to_Trigger_the_Action__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Expected Date to Trigger the Action</label>
    <type>Date</type>
</CustomField>