force-app/main/default/objects/Opportunity/fields/Expected_GMV__c.field-meta.xml
<CustomField>
    <fullName>Expected_GMV__c</fullName>
    <label>Expected GMV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>