force-app/main/default/objects/Opportunity/fields/Expected_GMV_Increase__c.field-meta.xml
<CustomField>
    <fullName>Expected_GMV_Increase__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Expected GMV Increase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>