force-app/main/default/objects/Opportunity/fields/Expected_Number_of_Listings_to_Activate__c.field-meta.xml
<CustomField>
    <fullName>Expected_Number_of_Listings_to_Activate__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Exp. Number of Listings to Activate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>