force-app/main/default/objects/Opportunity/fields/Expected_Price_Decrease__c.field-meta.xml
<CustomField>
    <fullName>Expected_Price_Decrease__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Exp. Price Decrease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>