force-app/main/default/objects/Opportunity/fields/Expected_Services__c.field-meta.xml
<CustomField>
    <fullName>Expected_Services__c</fullName>
    <inlineHelpText>What services are expected to be activated?</inlineHelpText>
    <label>Exp. Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Services</valueSetName>
    </valueSet>
</CustomField>