force-app/main/default/objects/Opportunity/fields/Feedback_Back_Care__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Back_Care__c</fullName>
    <businessOwnerUser>clement.vannicatte@backmarket.com</businessOwnerUser>
    <label>Feedback: Back Care</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>