force-app/main/default/objects/Opportunity/fields/Has_been_closed_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_closed_on__c</fullName>
    <label>Has been closed on</label>
    <type>Date</type>
</CustomField>