force-app/main/default/objects/Opportunity/fields/KPI_Issue__c.field-meta.xml
<CustomField>
    <fullName>KPI_Issue__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>KPI - Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Issue_KPI</valueSetName>
    </valueSet>
</CustomField>