force-app/main/default/objects/Opportunity/fields/KPI_Treshold__c.field-meta.xml
<CustomField>
    <fullName>KPI_Treshold__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>KPI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>