force-app/main/default/objects/Opportunity/fields/Latest_Product_ETA__c.field-meta.xml
<CustomField>
    <fullName>Latest_Product_ETA__c</fullName>
    <label>Latest Product ETA</label>
    <summarizedField>OpportunityLineItem.Action_ETA__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Stage__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>