force-app/main/default/objects/Opportunity/fields/lead_source__c.field-meta.xml
<CustomField>
    <fullName>lead_source__c</fullName>
    <label>Lead source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrant - Bowling contact form</fullName>
            </value>
            <value>
                <fullName>Entrant - Care lead</fullName>
            </value>
            <value>
                <fullName>Entrant - Internal referral</fullName>
            </value>
            <value>
                <fullName>Entrant - Other</fullName>
            </value>
            <value>
                <fullName>Outbound - Linkedin/Social</fullName>
            </value>
            <value>
                <fullName>Outbound - Offline event</fullName>
            </value>
            <value>
                <fullName>Outbound - Old BM lead</fullName>
            </value>
            <value>
                <fullName>Outbound - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>