force-app/main/default/objects/Opportunity/fields/Link_to_the_Source__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_Source__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>Link to the Source</label>
    <type>Url</type>
</CustomField>