force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Action__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>After-sale takes too much time</fullName>
            </value>
            <value>
                <fullName>Buyback prices are too high</fullName>
            </value>
            <value>
                <fullName>Creating &amp; updating listings is manual and takes too much time (no API)</fullName>
            </value>
            <value>
                <fullName>Managing orders manually takes too much time (no API)</fullName>
            </value>
            <value>
                <fullName>Other suppliers allow to pay after xx days</fullName>
            </value>
            <value>
                <fullName>Receiving orders 1 by 1 is not adapted to our processes</fullName>
            </value>
            <value>
                <fullName>The merchant can&apos;t reach his margins at those targeted prices</fullName>
            </value>
            <value>
                <fullName>The merchant doesn&apos;t have the possibility to source these products</fullName>
            </value>
            <value>
                <fullName>The merchant doesn&apos;t know how to refurbish/deal with these products</fullName>
            </value>
            <value>
                <fullName>The merchant is on Vacation Mode</fullName>
            </value>
            <value>
                <fullName>The quality of products from end-customers is bad</fullName>
            </value>
            <value>
                <fullName>The merchant can’t process devices one by one</fullName>
            </value>
            <value>
                <fullName>The merchant thinks buyback volumes will be low</fullName>
            </value>
            <value>
                <fullName>The merchant needs an API to manage their offer</fullName>
            </value>
            <value>
                <fullName>The service is too expensive</fullName>
            </value>
            <value>
                <fullName>Buyback is too time consuming</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>