force-app/main/default/objects/Opportunity/fields/Number_of_Targetable_Listings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Targetable_Listings__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label># of Targetable Listings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>