force-app/main/default/objects/Opportunity/fields/of_KPI_Contribution_in_the_SSM_Pool__c.field-meta.xml
<CustomField>
    <fullName>of_KPI_Contribution_in_the_SSM_Pool__c</fullName>
    <businessOwnerUser>ana.ordeig@backmarket.com</businessOwnerUser>
    <label>% of KPI Contribution in the SSM Pool</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>