force-app/main/default/objects/Opportunity/fields/Opportunity_Products_KO__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products_KO__c</fullName>
    <label>Opportunity Products KO</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Stage__c</field>
        <operation>equals</operation>
        <value>Merchant KO</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>