force-app/main/default/objects/Opportunity/fields/Opportunity_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Success_Rate__c</fullName>
    <formula>Opportunity_Products_OK__c / Total_Opportunity_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Success Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>