force-app/main/default/objects/Opportunity/fields/P_K__c.field-meta.xml
<CustomField>
    <fullName>P_K__c</fullName>
    <formula>TEXT(Account.Back_Office_PK__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P.K.</label>
    <type>Text</type>
</CustomField>