force-app/main/default/objects/Opportunity/fields/Pending_Products__c.field-meta.xml
<CustomField>
    <fullName>Pending_Products__c</fullName>
    <label>Pending Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Stage__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>