force-app/main/default/objects/Opportunity/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BM EU</fullName>
            </value>
            <value>
                <fullName>BM US</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>